--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		/* 让 Bootstrap 按钮在该组件里更适配布局（保持你原有 class） */
 		#paperFlow .btn.btn-primary.btn-lg{
-			min-width: 250px;
+			min-width: 200px;
 			min-height: 56px;
 			font-weight: 700;
 			text-align: center;
@@ -174,30 +174,27 @@
 					<li><i class="fas fa-check-circle me-2"></i>Background on LMs</li>
 					<li><i class="fas fa-check-circle me-2"></i>Quantifying Bias in LMs </li>
 					<li><i class="fas fa-check-circle me-2"></i>Mitigating Bias in LMs</li>
-					<li><i class="fas fa-check-circle me-2"></i>Resources for Evaluating Bias in LMs</li>
+					<li><i class="fas fa-check-circle me-2"></i>Resources for Fairness in LMs</li>
 					<li><i class="fas fa-check-circle me-2"></i>Future Directions</li>
 <!--					<li><i class="fas fa-check-circle me-2"></i>Practical workshops to lorem ipsum dolor</li>-->
 <!--					<li><i class="fas fa-check-circle me-2"></i>After-party lorem ipsum dolor</li>-->
 <!--					<li><i class="fas fa-check-circle me-2"></i>Free <a href="https://made4dev.com">developer t-shirts</a> and swag</li>-->
 				</ul>
 				<div style="display: flex; justify-content: center">
-					<div class="schedule-cta text-center" style="margin-right: 20px"><a href=https://dl.acm.org/doi/abs/10.1145/3682112.3682117 class="btn btn-primary btn-lg" target="_blank" style="width: 220px">Paper</a></div>
-
+<!--					<div class="schedule-cta text-center" style="margin-right: 20px"><a href=https://dl.acm.org/doi/abs/10.1145/3682112.3682117 class="btn btn-primary btn-lg" target="_blank" style="width: 220px">Paper</a></div>-->
 <!--					<div class="schedule-cta text-center" style="margin-left: 20px"><a href=Fairness_in_LMs_IJCAI_Tutorial.pdf class="btn btn-primary btn-lg" target="_blank" style="width: 220px">Tutorial slides</a></div>-->
-
-
 				</div><!--//benefits-list-->
 <!--				<p style="margin-top: 25px; font-size: 20px ">   Check out our <a href=# style="font-style: italic;"><strong>survey</strong></a> on fairness in language models. &nbsp;</p>-->
-				<p style="margin-top: 30px; font-size: 20px "> Our surveys the basis for the tutorial slides; click to view the <strong>survey</strong> and <strong>slides</strong>. &nbsp;</p>
-
+<!--				<p style="margin-top: 30px; font-size: 20px "> Our surveys the basis for the tutorial slides; click to view the <strong>survey</strong> and <strong>slides</strong>. &nbsp;</p>-->
+				<p style="font-size: 20px; margin-top: 30px">   This tutorial is grounded in our surveys and established benchmarks, all available as <a href=https://github.com/lavinWong/fairness-in-large-language-models style="font-style: italic"><strong>open-source resources</strong></a><strong>&nbsp;:</strong></p>
 				<div id="paperFlow"  style="margin-top: 25px">
 					<svg class="wires" aria-hidden="true"></svg>
 					<div class="cols">
 						<div class="left-col">
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/abs/2402.06853" style="text-align:center">History, Development, and Principles of Large Language Models-An Introductory Survey</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3682112.3682117">Fairness in Large Language Models: A Taxonomic Survey</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3682112.3682117">Fairness Definitions in Language Models Explained</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/abs/2506.23411">Datasets for Fairness in Language Models: An In-Depth Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://link.springer.com/article/10.1007/s43681-024-00583-7" style="text-align:center">LMs Introductory Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3682112.3682117">Fairness in LMs Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/abs/2407.18454">Fairness Definitions Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/abs/2506.23411">Datasets Survey</a>
 						</div>
 						<div class="right-col">
 							<a class="btn btn-primary btn-lg" target="_blank" href=Fairness_in_LMs_IJCAI_Tutorial.pdf>Tutorial slides</a>
@@ -269,7 +266,7 @@
 <!--									}-->
 <!--								}-->
 <!--							</style>-->
-				<p style="font-size: 20px; margin-top: 25px">   This tutorial is grounded in our surveys and established benchmarks, all available as <a href=https://github.com/lavinWong/fairness-in-large-language-models style="font-style: italic"><strong>open-source resources</strong></a>.</p>
+
 <!--			<div class="event-countdown text-center mb-3">-->
 <!--				<h4 class="countdown-intro mb-2 text-center mb-3">Event Starts In:</h4>-->
 <!--				<div id="countdown-box" class="countdown-box"></div>-->
@@ -577,7 +574,7 @@
 						<div class="content">
 							<h3 class="title mb-3">Part III: Mitigating Bias in LMs</h3>
 							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room 518AB</div>
-							<div class="desc"><strong>- Pre-processing<br>- In-training<br>- Intra-processing <br>- Post-processing</strong></div>
+							<div class="desc"><strong>- Pre-processing<br>- In-processing<br>- Intra-processing <br>- Post-processing</strong></div>
 						</div><!--//content-->
 					</div><!--//item-->
 					<div class="item item-talk">
@@ -593,7 +590,7 @@
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
-							<h3 class="title mb-3">Part IV: Resources for Evaluating Bias in LMs</h3>
+							<h3 class="title mb-3">Part IV: Resources for Fairness in LMs</h3>
 							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room 518AB </div>
 							<div class="desc"><strong>- Datasets for fairness in LMs<br>- Other resources for fairness in LMs</strong></div>
 						</div><!--//content-->
