--- a/index.html
+++ b/index.html
@@ -313,12 +313,12 @@
 								<div class="meta">Ph.D. Candidate</div>
 								<div class="meta">Florida International University</div>
 							</div><!--//card-text-->
-							<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Read more &rarr;</a>
+							<a href="https://zichongwang.com/">Read more &rarr;</a>
 						</div><!--//card-->
 						<div class="card-footer text-muted">
 							<ul class="social-list list-inline mb-0">
 <!--								<li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>-->
-								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/zichong-wang-a816a120b/"><i class="fab fa-google fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="https://zichongwang.com/"><i class="fab fa-google fa-fw"></i></a></li>
 <!--								<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>-->
 							</ul><!--//social-list-->
 						</div>
@@ -333,7 +333,7 @@
 								<div class="meta">Ph.D. Student</div>
 								<div class="meta">Florida International University</div>
 							</div><!--//card-text-->
-							<a href="#modal-speaker-2" data-bs-toggle="modal" data-bs-target="#modal-speaker-2">Read more &rarr;</a>
+							<a href="https://www.linkedin.com/in/avash-palikhe-149224219/" data-bs-toggle="modal" data-bs-target="#modal-speaker-2">Read more &rarr;</a>
 						</div><!--//card-->
 						<div class="card-footer text-muted">
 							<ul class="social-list list-inline mb-0">
@@ -354,7 +354,7 @@
 								<div class="meta">Ph.D. Candidate</div>
 								<div class="meta">Florida International University</div>
 							</div><!--//card-text-->
-							<a href="#modal-speaker-3" data-bs-toggle="modal" data-bs-target="#modal-speaker-3">Read more &rarr;</a>
+							<a href="https://zhipengy.com/">Read more &rarr;</a>
 						</div><!--//card-->
 						<div class="card-footer text-muted">
 							<ul class="social-list list-inline mb-0">
@@ -394,7 +394,7 @@
 								<div class="meta">Assistant Professor</div>
 								<div class="meta">Florida International University</div>
 							</div><!--//card-text-->
-							<a href="#modal-speaker-5" data-bs-toggle="modal" data-bs-target="#modal-speaker-5">Read more &rarr;</a>
+							<a href="https://users.cs.fiu.edu/~wbzhang/" >Read more &rarr;</a>
 						</div><!--//card-->
 						<div class="card-footer text-muted">
 							<ul class="social-list list-inline mb-0">
