--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 						<div class="left-col">
 							<a class="btn btn-primary btn-lg" target="_blank" href="https://link.springer.com/article/10.1007/s43681-024-00583-7" style="text-align:center">LMs Introductory Survey</a>
 							<a class="btn btn-primary btn-lg" target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3682112.3682117">Fairness in LMs Survey</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/abs/2407.18454">Fairness Definitions Survey</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/abs/2506.23411">Datasets Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2407.18454">Fairness Definitions Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2506.23411">Fairness Datasets Survey</a>
 						</div>
 						<div class="right-col">
 							<a class="btn btn-primary btn-lg" target="_blank" href=Fairness_in_LMs_IJCAI_Tutorial.pdf>Tutorial slides</a>
