--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		/* 让 Bootstrap 按钮在该组件里更适配布局（保持你原有 class） */
 		#paperFlow .btn.btn-primary.btn-lg{
-			min-width: 200px;
+			min-width: 420px;
 			min-height: 56px;
 			font-weight: 700;
 			text-align: center;
@@ -191,13 +191,13 @@
 					<svg class="wires" aria-hidden="true"></svg>
 					<div class="cols">
 						<div class="left-col">
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://link.springer.com/article/10.1007/s43681-024-00583-7" style="text-align:center">LMs Introductory Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://link.springer.com/article/10.1007/s43681-024-00583-7" style="text-align:center">Introduction to LMs survey</a>
 							<a class="btn btn-primary btn-lg" target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3682112.3682117">Fairness in LMs Survey</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2407.18454">Fairness Definitions Survey</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2506.23411">Fairness Datasets Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2407.18454">Fairness Definitions in LMs survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2506.23411">Datasets for Fairness in LMs survey </a>
 						</div>
 						<div class="right-col">
-							<a class="btn btn-primary btn-lg" target="_blank" href=Fairness_in_LMs_IJCAI_Tutorial.pdf>Tutorial slides</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href=Fairness_in_LMs_IJCAI_Tutorial.pdf style="min-width: 200px">Tutorial slides</a>
 						</div>
 					</div>
 				</div>
