update time and location

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 				<div class="tab-pane active" id="tab-1-content" role="tabpanel" aria-labelledby="tab-1">
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">12:00 - 12:30</h4>
+							<h4 class="time mb-3">14:00 - 14:30</h4>
 							<div class="profile">
 								<a href="#modal-speaker-5" data-bs-toggle="modal" data-bs-target="#modal-speaker-5"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/wenbin.png" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-5" data-bs-toggle="modal" data-bs-target="#modal-speaker-5">Wenbin Zhang</a></div>
@@ -534,13 +534,13 @@
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part I: Background on LMs</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room 518AB</div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room 518AB</div>
 							<div class="desc"><strong>- History of LMs <br>- Root Causes of Bias in LMs</strong> </div>
 						</div><!--//content-->
 					</div><!--//item-->
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">12:30 - 13:00</h4>
+							<h4 class="time mb-3">14:30 - 13:10</h4>
 							<div class="profile">
 								<a href="#modal-speaker-2" data-bs-toggle="modal" data-bs-target="#modal-speaker-2"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/avash.png" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-2" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Avash Palikhe</a></div>
@@ -548,7 +548,7 @@
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part II: Quantifying Bias in LMs</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room 518AB</div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room 518AB</div>
 							<div class="desc"> <strong>- Fairness definitions for Encoder-only LMs<br>- Fairness definitions for Decoder-only LMs<br>- Fairness definitions for Encoder decoder LMs</strong></div>
 						</div><!--//content-->
 					</div><!--//item-->
@@ -564,7 +564,7 @@
 <!--					</div>&lt;!&ndash;//item&ndash;&gt;-->
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">13:30 - 14:00</h4>
+							<h4 class="time mb-3">13:10 - 13:50</h4>
 							<div class="profile">
 								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/zichong_1.jpg" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Zichong Wang</a></div>
@@ -573,25 +573,25 @@
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part III: Mitigating Bias in LMs</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room 518AB</div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room 518AB</div>
 							<div class="desc"><strong>- Pre-processing<br>- In-processing<br>- Intra-processing <br>- Post-processing</strong></div>
 						</div><!--//content-->
 					</div><!--//item-->
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">14:00 - 14:30</h4>
+							<h4 class="time mb-3">13:50 - 14:30</h4>
 <!--							<div class="profile">-->
 <!--								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/zichong_1.jpg" alt=""></a>-->
 <!--								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Zichong Wang</a></div>-->
 <!--							</div>&lt;!&ndash;//profile&ndash;&gt;-->
 							<div class="profile">
-								<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/jiale.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-2">Jiale Zhang</a></div>
+								<a href="#modal-speaker-3" data-bs-toggle="modal" data-bs-target="#modal-speaker-3"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/zhipeng.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-3" data-bs-toggle="modal" data-bs-target="#modal-speaker-2">Zhipeng Yin</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part IV: Resources for Fairness in LMs</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room 518AB </div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room 518AB </div>
 							<div class="desc"><strong>- Datasets for fairness in LMs<br>- Other resources for fairness in LMs</strong></div>
 						</div><!--//content-->
 					</div><!--//item-->
@@ -610,13 +610,13 @@
 							<h4 class="time mb-3">14:30 - 15:00</h4>
 
 							<div class="profile">
-								<a href="#modal-speaker-3" data-bs-toggle="modal" data-bs-target="#modal-speaker-3"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/zhipeng.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-3" data-bs-toggle="modal" data-bs-target="#modal-speaker-3">Zhipeng Yin</a></div>
+								<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/jiale.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-3">Jiale Zhang</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part V: Future Directions</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room 518AB</div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room 518AB</div>
 							<div class="desc"><STRONG>- Rational Counterfactual Data Augmentation<BR>- Balancing Performance and Fairness in LMs<br>- Fulfilling Multiple Types of Fairness<br>- Theoretical Analysis and Guarantees
 								<br>- Developing More and Tailored Datasets</STRONG> </div>
 						</div><!--//content-->
