--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
 					<svg class="wires" aria-hidden="true"></svg>
 					<div class="cols">
 						<div class="left-col">
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://link.springer.com/article/10.1007/s43681-024-00583-7" style="text-align:center">Introduction to LMs survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://link.springer.com/article/10.1007/s43681-024-00583-7" style="text-align:center">Introduction to LMs Survey</a>
 							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2407.18454">Bias Quantification in LMs Survey</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3682112.3682117">Bias Mitigation in LMs survey</a>
-							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2506.23411">Datasets for Fairness in LMs survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3682112.3682117">Bias Mitigation in LMs Survey</a>
+							<a class="btn btn-primary btn-lg" target="_blank" href="https://arxiv.org/pdf/2506.23411">Datasets for Fairness in LMs Survey</a>
 						</div>
 						<div class="right-col">
 							<a class="btn btn-primary btn-lg" target="_blank" href=Fairness_in_LMs_IJCAI_Tutorial.pdf style="min-width: 200px; margin-left: 30px">Tutorial slides</a>
